--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "nanoid": "^3.1.30",
     "socket.io": "^4.4.0"
   }
